# docgen

./: .designdoc.toml.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md  investigation.md
.github/workflows/: release.yml  test.yml
plans/: 2026_04_16_designdoc_gen_v1.md  2026_04_22_ultrareview_followup.md  future_improvements_investigations.md
plans/archive/: 2026_04_22_ultrareview_followup.md
plugins/designdoc/: README.md  plugin.json
src/designdoc/: __init__.py  budget.py  cli.py  config.py  hil.py  io_utils.py  loop.py  orchestrator.py  resolve.py  runner.py  state.py  verdict.py
tests/: conftest.py
tests/e2e/: test_incremental_dogfood.py  test_tiny_repo_full.py
tests/integration/: test_budget_halt.py  test_budget_parallel_cancels_siblings.py  test_cli_budget_and_only.py  test_cli_config.py  test_cli_error_mapping.py  test_cli_parallelism_flag.py  test_cli_resolve.py  test_cli_subprocess.py  test_config_surface_wiring.py  test_orchestrator_checkpoint_logs.py  test_plugin.py  test_resume.py  test_smoke.py  test_stage2_incremental.py  test_stage2_parallel.py  test_stage2_resume.py  test_stage3_incremental.py  test_stage3_resume.py  test_stage4_incremental.py  test_stage4_resume.py  test_stage5_incremental.py  test_stage5_resume.py  test_stage6_incremental.py  test_stage6_resume.py  test_stage7_incremental.py  test_stage7_resume.py  test_stage8_promotes_hashes.py  test_stage8_resume.py  (+10 more)
(+82 files in other folders)
