[project]
name = "designdoc"
version = "1.2.0"
description = "Harness-engineered codebase documentation pipeline"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Rick Hightower" }]
license = { text = "MIT" }
dependencies = [
    "claude-agent-sdk>=0.1.50,<0.2",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "anyio>=4.3",
    "tomli-w>=1.0",
    "ruamel.yaml>=0.18",
    "jinja2>=3.1",
]

[project.scripts]
designdoc = "designdoc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/designdoc"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
markers = [
    "requires_mmdc: needs @mermaid-js/mermaid-cli installed",
    "requires_api: needs ANTHROPIC_API_KEY and makes real calls",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
